--- a/app/src/main/res/layout/activity_ocr.xml
+++ b/app/src/main/res/layout/activity_ocr.xml
@@ -14,20 +14,21 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Upload Image"
-        android:background="#167865"
+        android:background="#7865"
         android:onClick="upload"
         android:id="@+id/imageupload"
 
         />
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="332dp"
+        android:layout_height="400dp"
         android:background="#ffffff"
         android:id="@+id/ImageContainer">
 
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_centerHorizontal="true"
             android:id="@+id/imageView"
            />
 
@@ -40,7 +41,7 @@
         android:layout_alignParentStart="true"
         android:clickable="true"
         android:onClick="processImage"
-        android:background="#167865"
+        android:background="#7865"
         android:id="@+id/OCRButtonContainer">
 
         <TextView
@@ -69,8 +70,9 @@
             android:textSize="18dp"
             android:layout_centerVertical="true"
             android:layout_centerHorizontal="true"
+            android:enabled="true"
             android:background="#dedede"
-            android:textColor="#a3a3a3" />
+            android:textColor="#000000" />
     </RelativeLayout>
    </LinearLayout>
 </ScrollView>
